--- a/src/components/Footer/FooterOverlay.css
+++ b/src/components/Footer/FooterOverlay.css
@@ -10,7 +10,7 @@
 
 .appFooterOverlay-black {
   height: 25%;
-  background: var(--color-black);
+  background: var(--color-crimson);
 }
 
 .appFooterOverlay-img {
