--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -24,7 +24,7 @@
 .appMenuItem-dash {
   width: 90px;
   height: 1px;
-  background: var(--color-golden);
+  background: var(--color-pink);
   margin: 0 1rem;
 }
 
