--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
   --color-crimson: #f5efdb;
   --color-grey: #aaaaaa;
   --color-white: #ffffff;
+  --color-azure: #23a3a6;
+  --color-pink: #d96d87;
+
 }
 
 * {
