--- a/src/components/Footer/Newsletter.css
+++ b/src/components/Footer/Newsletter.css
@@ -1,7 +1,6 @@
 .appNewsletter {
   padding: 2rem 4rem;
-  border: 1px solid var(--color-golden);
-  background: var(--color-black);
+  border: 1px solid var(--color-azure);
 }
 
 .appNewsletter-heading {
@@ -15,7 +14,7 @@
 
 .appNewsletter-input input {
   width: 620px;
-  border: 1px solid var(--color-golden);
+  border: 1px solid var(--color-azure);
   border-radius: 5px;
   font-size: 1rem;
   font-family: var(--font-base);
@@ -23,7 +22,7 @@
 
   margin-right: 2rem;
   padding: 0.75rem 1rem;
-  background: var(--color-black);
+  background: var(--color-crimson);
 }
 
 .appNewsletter-input button {
