--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-black);
+  background: var(--color-crimson);
 
   padding: 1rem 2rem;
 }
@@ -49,7 +49,7 @@
 }
 
 .appNavbar-login a:hover {
-  border-bottom: 1px solid var(--color-golden);
+  border-bottom: 1px solid var(--color-azure);
 }
 
 .appNavbar-login div {
@@ -59,7 +59,10 @@
 }
 
 .appNavbar-smallscreen {
-  display: none;
+  display: none; 
+}
+.appNavbar-smallscreen svg {
+  color: var(--color-azure) !important; 
 }
 
 .appNavbar-smallscreen_overlay {
@@ -68,8 +71,9 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: var(--color-black);
+  background: var(--color-crimson);
   transition: 0.5s ease;
+
 
   flex-direction: column;
   z-index: 5;
@@ -77,7 +81,7 @@
 
 .appNavbar-smallscreen_overlay .overlay__close {
   font-size: 27px;
-  color: var(--color-golden);
+  color: var(--color-azure);
   cursor: pointer;
 
   position: absolute;
@@ -92,7 +96,7 @@
 .appNavbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color: var(--color-golden);
+  color: var(--color-azure);
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-base);
