--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --color-golden: #dcca87;
   --color-black: #0c0c0c;
   --color-gray: #545454;
-  --color-crimson: #f5efdb;
+  --color-hay: #f5efdb;
   --color-grey: #aaaaaa;
   --color-white: #ffffff;
   --color-azure: #23a3a6;
