--- a/src/components/Footer/Newsletter.css
+++ b/src/components/Footer/Newsletter.css
@@ -18,7 +18,8 @@
   border-radius: 5px;
   font-size: 1rem;
   font-family: var(--font-base);
-  color: var(--color-white);
+  font-weight: 900;
+  color: black !important;;
 
   margin-right: 2rem;
   padding: 0.75rem 1rem;
