--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,21 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: #f1e5c4;
+  transition: border-bottom 0.3s ease;
+}
+
+.appNavbar.light-mode {
+  border-bottom: 2px solid #000000;
+}
+
+.appNavbar.dark-mode {
+  border-bottom: 2px solid #ffd700;
+  background-color: #1a1a1a; /* Colore oro */
 }
 
 .appNavbar-logo {
@@ -56,10 +71,11 @@
 }
 
 .appNavbar-smallscreen {
-  display: none; 
+  display: none;
 }
+
 .appNavbar-smallscreen svg {
-  color: var(--color-azure) !important; 
+  color: var(--color-azure) !important;
 }
 
 .appNavbar-smallscreen_overlay {
@@ -69,7 +85,6 @@
   width: 100%;
   height: 100vh;
   transition: 0.5s ease;
-
 
   flex-direction: column;
   z-index: 5;
@@ -130,4 +145,8 @@
   .appNavbar-logo img {
     width: 110px;
   }
+}
+
+body {
+  padding-top: 80px; /* Regola questo valore in base all'altezza effettiva della tua navbar */
 }
