--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,11 @@
+:root {
+  --navbar-height: 120px; /* Adjust this value to match your navbar height */
+  --color-background: #1a1a1a;
+  --color-text: #ffffff;
+  --color-azure: #4a54d1;
+  --color-grey: #aaaaaa;
+}
+
 .appNavbar {
   width: 100%;
   display: flex;
@@ -8,17 +16,9 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: #f1e5c4;
-  transition: border-bottom 0.3s ease;
-}
-
-.appNavbar.light-mode {
-  border-bottom: 2px solid #000000;
-}
-
-.appNavbar.dark-mode {
+  height: var(--navbar-height);
+  background-color: var(--color-background);
   border-bottom: 2px solid #ffd700;
-  background-color: #1a1a1a; /* Colore oro */
 }
 
 .appNavbar-logo {
@@ -36,7 +36,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   list-style: none;
 }
 
@@ -59,6 +58,7 @@
   margin: 0 1rem;
   text-decoration: none;
   transition: 0.5s ease;
+  color: var(--color-text);
 }
 
 .appNavbar-login a:hover {
@@ -68,14 +68,11 @@
 .appNavbar-login div {
   width: 1px;
   height: 30px;
+  background-color: var(--color-text);
 }
 
 .appNavbar-smallscreen {
   display: none;
-}
-
-.appNavbar-smallscreen svg {
-  color: var(--color-azure) !important;
 }
 
 .appNavbar-smallscreen_overlay {
@@ -84,8 +81,8 @@
   left: 0;
   width: 100%;
   height: 100vh;
+  background: var(--color-background);
   transition: 0.5s ease;
-
   flex-direction: column;
   z-index: 5;
 }
@@ -94,7 +91,6 @@
   font-size: 27px;
   color: var(--color-azure);
   cursor: pointer;
-
   position: absolute;
   top: 20px;
   right: 20px;
@@ -114,7 +110,13 @@
 }
 
 .appNavbar-smallscreen_links li:hover {
-  color: var(--color-white);
+  color: var(--color-text);
+}
+
+body {
+  padding-top: var(--navbar-height);
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
 
 @media screen and (min-width: 2000px) {
@@ -145,8 +147,4 @@
   .appNavbar-logo img {
     width: 110px;
   }
-}
-
-body {
-  padding-top: 80px; /* Regola questo valore in base all'altezza effettiva della tua navbar */
 }
